@@ -250,7 +250,11 @@ bool EmbreeAccel::Intersect(const Ray *ray, RayHit *hit) const {
 	
 	rtcIntersect1(embreeScene, &context, &embreeRayHit);
 
-	if (embreeRayHit.hit.geomID != RTC_INVALID_GEOMETRY_ID) {
+	if ((embreeRayHit.hit.geomID != RTC_INVALID_GEOMETRY_ID) &&
+			// A safety check in case of not enough numerical precision. Embree
+			// can return some intersection out of [mint, maxt] range for
+			// some extremely large floating point number.
+			(embreeRayHit.ray.tfar >= ray->mint)) {
 		hit->meshIndex = (embreeRayHit.hit.instID[0] == RTC_INVALID_GEOMETRY_ID) ? embreeRayHit.hit.geomID : embreeRayHit.hit.instID[0];
 		hit->triangleIndex = embreeRayHit.hit.primID;
 
